# SpinSight

./: .gitignore  README.md  app.py  contrastExplorer.py  deploy.py  pyproject.toml  requirements.txt
MRIsimulator/: README.md  app.py  app.yaml  requirements.txt
spinsight/: Controller.py  DAG.py  Dashboard.py  InputParams.py  MRIsimulator.py  __init__.py  app.py  constants.py  controller.py  convert.py  dashboard.py  deploy.py  formatting.py  gridding.py  gui.py  hoverCallback.js  hover_manager.py  input_params.py  loadSVG.py  load_phantom.py  main.py  nodes.py  paramBounds.tex  param_utils.py  params.py  phantom.py  readouts.tex  recon.py  sequence.py  simulator.py  simulator_graph.py  spinsight.py  styles.py
spinsight/nodes/: SNR_and_scantime.py  helpers.py  image_plot.py  image_reconstruction.py  internal_input_params.py  kspace_plot.py  kspace_processing.py  kspace_simulation.py  param_bounds.py  phase_encoding_order.py  place_sequence_objects.py  sequence_plot.py  sequence_timing.py  set_ui_param_bounds.py  set_ui_param_visibility.py  set_ui_params.py  setup_sequence_objects.py
spinsight/phantoms/Shepp-Logan/: Shepp-Logan.toml
spinsight/phantoms/abdomen/: abdomen.toml
spinsight/phantoms/brain/: brain.toml
tests/: test_segment_order.py
