[tool.poetry]
name = "spinsight"
version = "1.0.0"
description = "MR image simulator for teaching purposes"
authors = ["Johan Berglund <johan.berglund@akademiska.se>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
holoviews = "^1.18.0"
panel = "^1.3.0"
param = "^2.0.0"
numpy = "^1.26.1"
xarray = "^2023.10.1"
scipy = "^1.11.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
